--- a/xcx-selectBuy-demo/project.config.json
+++ b/xcx-selectBuy-demo/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.9",
 	"appid": "wx08468e9ff46ce5b3",
-	"projectname": "xcx-selectBuy-demo",
+	"projectname": "%E5%A4%9A%E4%B8%AA%E9%80%89%E9%A1%B9%EF%BC%8C%E8%B4%AD%E4%B9%B0%E8%AE%A1%E7%AE%97%E4%BB%B7%E6%A0%BC",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
